<resources>
    <string name="app_name">Formula1TfcFront</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fórmula 1</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cuenta</string>
    <string name="menu_home">Noticias</string>
    <string name="menu_gallery">Pilotos</string>
    <string name="menu_slideshow">Circuitos</string>
    <string name="menu_clasificacion">Clasificación Pilotos</string>
    <string name="menu_clasificacionEscuderias">Clasificación Escuderias</string>
</resources>