<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/icons8_noticias_50"
                android:title="@string/menu_home" />
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/icons8_casco_de_la_moto_50"
                android:title="@string/menu_gallery"/>
        <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/icons8_racing_lap_50"
                android:title="@string/menu_slideshow"/>
        <item
                android:id="@+id/clasificacionFragment"
                android:icon="@drawable/icons8_trofeo_50"
                android:title="@string/menu_clasificacion"/>
        <item
                android:id="@+id/clasificacionEscuderaFragment"
                android:icon="@drawable/icons8_trofeo_50"
                android:title="@string/menu_clasificacionEscuderias"/>

    </group>
</menu>