<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.example.formula1tfcfront.aplication.ui.noticias.Noticias"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_noticias"/>

    <fragment
            android:id="@+id/nav_gallery"
            android:name="com.example.formula1tfcfront.aplication.ui.pilotos.Pilotos"
            android:label="@string/menu_gallery"
            tools:layout="@layout/fragment_pilotos"/>

    <fragment
            android:id="@+id/nav_slideshow"
            android:name="com.example.formula1tfcfront.aplication.ui.circuitos.Circuitos"
            android:label="@string/menu_slideshow"
            tools:layout="@layout/fragment_circuitos"/>
</navigation>